# maVoice-Linux

./: .gitignore  CPAL_EXAMPLES.md  Dockerfile  QUICK_REFERENCE.md  README.md  SETUP-STATUS.md  check-wsl-tauri-setup.sh  docker-compose.dev.yml  install-tauri2-deps.sh  install.sh  package-lock.json  package.json  run-on-windows.md  setup-mavoice.sh  test-install-sequence.sh  windows-text-injection-fix.md
mavoice-native/: Cargo.toml  install.sh  mavoice.service
mavoice-native/src/: ai_shader.wgsl  app.rs  config.rs  dashboard.rs  main.rs  renderer.rs  shader.wgsl  state_machine.rs
mavoice-native/src/api/: gemini.rs  groq.rs  mod.rs
mavoice-native/src/audio/: mod.rs  player.rs  recorder.rs
mavoice-native/src/system/: hotkeys.rs  mod.rs  text_inject.rs
mavoice-native/src/tools/: mod.rs
src/: index.html  main.js  style.css
src-gtk/: Cargo.toml  setup.sh
src-gtk/src/: audio_recorder.rs  groq_client.rs  main.rs  text_injector.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/aquavoice-frontend/: .env  .env.example  package-lock.json  package.json
src-tauri/aquavoice-frontend/src/: App.css  App.tsx  index.css
src-tauri/aquavoice-frontend/src/components/: FloatingOverlay.tsx
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  webm.rs
src-tauri/src/api/: groq.rs
src-tauri/src/audio/: capture.rs  groq_recorder.rs  mock_recorder.rs  mod.rs
src-tauri/src/system/: mod.rs  text_inject.rs
