[package]
name = "mavoice-native"
version = "0.1.0"
description = "Pure Rust voice dictation overlay — Groq Whisper + wgpu"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "28"
bytemuck = { version = "1", features = ["derive"] }
cpal = "0.16"
hound = "3.5"
crossbeam-channel = "0.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
global-hotkey = "0.7"
log = "0.4"
env_logger = "0.11"
dirs = "6"

[profile.release]
opt-level = "z"
lto = true
strip = true
