[package]
name = "aquavoice-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.7", package = "gtk4" }
libadwaita = "0.5"
cpal = "0.16.0"
hound = "3.5.1"
crossbeam-channel = "0.5.15"
log = "0.4.27"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x11 = "2.21"
enigo = "0.2"