[package]
name = "aquavoice-linux"
version = "0.1.0"
description = "AquaVoice Linux - Voice recording and transcription app"
authors = ["AquaVoice Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
reqwest = { version = "0.11", features = ["json", "multipart"] }
hound = "3.5"
