[package]
name = "aquavoice-linux"
version = "0.1.0"
description = "AquaVoice Linux - Voice recording and transcription app"
authors = ["AquaVoice Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.16.0"
hound = "3.5.1"
crossbeam-channel = "0.5.15"
log = "0.4.27"
